--- a/package.json
+++ b/package.json
@@ -19,9 +19,15 @@
   },
   "homepage": "https://github.com/Souljavan/upgrade-Nodejs-GymApiRest#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-validator": "^6.14.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.2.0",
-    "mongoose": "^6.0.13"
+    "mongoose": "^6.0.13",
+    "mongoose-unique-validator": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
